[package]
name = "subsquid-client"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2"
reqwest = "0.12"
tokio = { version = "1.37", features = ["full"] }
log = { version = "0.4", features = ["kv", "std"] }
async-trait = "0.1"
simple_logger = "5"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1"
thiserror = "1"
